# coach-ai

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_DESKTOP_GUIDE.md  EXAMPLES.md  OBSIDIAN_SETUP.md  QUICKSTART.md  README.md  claude_desktop_config.json  install.sh  pyproject.toml  test_tools.py
src/coach_ai/: __init__.py  daily_notes.py  migrations.py  obsidian.py  recommendations.py  server.py  storage.py  task_selection.py
